se separa el proyecto sumando login.js login.html login.css se adjunta readme y licence, se actualizan las funciones de agregar tarea, manejar inicio de sesion, actualizarsaludo, cargasLista

--- a/package.json
+++ b/package.json
@@ -12,3 +12,11 @@
     "animate.css": "^4.1.1"
   }
 }
+
+
+const erroresLogin = {
+  "usuarioNoEncontrado": "Usuario no encontrado. Verifica tus credenciales.",
+  "datosIncorrectos": "Los datos ingresados no son correctos. Inténtalo nuevamente.",
+  "camposVacios": "Por favor completa todos los campos.",
+  "formatoEmail": "El formato del correo electrónico no es válido."
+};
